# MLserving-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md
TFserving/: README.md
TFserving/ClientAPI/: README.md
TFserving/ClientAPI/batch/: batchpara.config
TFserving/ClientAPI/config/: Toy.config  versionctrl.config  versionlabels.config
TFserving/ClientAPI/cpp/cmake/: README.md  grpc-cpp.dockerfile
TFserving/ClientAPI/cpp/cmake-static-lib/: README.md  build-cpp-api.sh
TFserving/ClientAPI/cpp/make/: README.md  (+1 more)
TFserving/ClientAPI/cpp/make-static-lib/: README.md  grpc-cpp-static.dockerfile
TFserving/ClientAPI/go/: README.md  grpcgo.dockerfile  protoc.sh
TFserving/ClientAPI/monitor/: monitor.config
TFserving/ClientAPI/python/: README.md  grpc_metadata.py  grpc_model_status.py  grpc_reload_model.py  grpc_request.py  grpc_request_log.py  post_request.py
TFserving/ClientAPI/warmup/: warmup.py
TFserving/CustomOp/: README.md
TFserving/CustomOp/custom-op/: .bazelrc  BUILD  MANIFEST.in  Makefile  README.md  build_pip_pkg.sh  configure.sh  setup.py
TFserving/CustomOpServing/: README.md  custom_op_model.py
TFserving/CustomServer/: .bazelrc  WORKSPACE  build.sh
TFserving/CustomServer/hashmap/: BUILD  hashmap_source_adapter.cc  hashmap_source_adapter.h  hashmap_source_adapter_test.cc
TFserving/CustomServing/: README.md
TorchServing/: README.md
TorchServing/CustomOp/: CMakeLists.txt  build.sh  test.sh
TorchServing/CustomOp/src/: CMakeLists.txt  add_index.cpp
TorchServing/CustomOp/tests/: CMakeLists.txt  add_index_float_test.py  add_index_test.py
(+105 files in other folders)
